--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
-    "version": 2,
+    "version":2,
     "builds": [
-      {
-        "src": "dist/index.js",
-        "use": "@vercel/node"
-      }
+      { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "dist/index.js"
-      }
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
     ]
   }
